@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2014 THALES GLOBAL SERVICES.
+ * Copyright (c) 2006, 2016 THALES GLOBAL SERVICES.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -33,29 +33,29 @@ public final class NamingUtil {
 	
 	/**
 	 * Return the name of the given element, if any
-	 * @param elt_p a non-null element
+	 * @param elt a non-null element
 	 * @return a potentially null string
 	 */
-	public static String getName(EObject elt_p) {
+	public static String getName(EObject elt) {
 		String result = null;
-		if (elt_p instanceof AbstractNamedElement)
-		  result = ((AbstractNamedElement)elt_p).getName();
+		if (elt instanceof AbstractNamedElement)
+		  result = ((AbstractNamedElement)elt).getName();
 		return result;
 	}
 	
   /**
    * Add a suffix to the element's name, if applicable.
-   * @param elt_p a non-null element
-   * @param suffix_p a potentially null string
+   * @param elt a non-null element
+   * @param suffix a potentially null string
    * @return whether the operation succeeded or not
    */
-	public static boolean suffixName(EObject elt_p, String suffix_p) {
+	public static boolean suffixName(EObject elt, String suffix) {
     boolean result = false;
-    if (null != suffix_p && elt_p instanceof AbstractNamedElement) {
-      AbstractNamedElement namedElement = (AbstractNamedElement)elt_p;
+    if (null != suffix && elt instanceof AbstractNamedElement) {
+      AbstractNamedElement namedElement = (AbstractNamedElement)elt;
       String name = namedElement.getName();
       if (name != null && name.length() > 0) {
-        String newName = buildString(name, suffix_p);
+        String newName = buildString(name, suffix);
         try {
           namedElement.setName(newName);
           result = true;
@@ -71,33 +71,33 @@ public final class NamingUtil {
    * Add a suffix to the element's and and all its children's names,
    * whenever applicable.
    */
-  public static void suffixNameDeep(EObject elt_p, final String suffix_p) {
-    suffixName(elt_p, suffix_p);
-    TreeIterator<EObject> it = elt_p.eAllContents();
+  public static void suffixNameDeep(EObject elt, final String suffix) {
+    suffixName(elt, suffix);
+    TreeIterator<EObject> it = elt.eAllContents();
     while(it.hasNext())
-      suffixName(it.next(), suffix_p);
+      suffixName(it.next(), suffix);
   }
 
   /**
    * Generalization of suffixNameDeep.
    */
-  public static void suffixNamesDeep(Iterable<? extends EObject> elts_p,
-      final String suffix_p) {
-    for (EObject current : elts_p) suffixNameDeep(current, suffix_p);
+  public static void suffixNamesDeep(Iterable<? extends EObject> elts,
+      final String suffix) {
+    for (EObject current : elts) suffixNameDeep(current, suffix);
   }
 
   /**
  * Build a suffix using an integer which is such that it yields a name
  * which is unique (not already used) among the given elements.
  * 
- * @param peers_p the elements whose names are considered for uniqueness
- * @param baseName_p the base name for the suffix, null being equivalent to ""
+ * @param peers the elements whose names are considered for uniqueness
+ * @param baseName the base name for the suffix, null being equivalent to ""
  * @return the suffix
  */
   public static String getSuffixForUniqueName(
-      Iterable<? extends EObject> peers_p, String baseName_p) {
-    assert peers_p != null;
-    int index = getIndexForUniqueNameSuffix(peers_p, baseName_p);
+      Iterable<? extends EObject> peers, String baseName) {
+    assert peers != null;
+    int index = getIndexForUniqueNameSuffix(peers, baseName);
     final String suffixProposal = getSuffixFromNumber(index);
     return suffixProposal;
   }
@@ -106,16 +106,16 @@ public final class NamingUtil {
    * Generalization of getSuffixForUniqueName to several names and sets of elements.
    */
   public static String getSuffixForUniqueNames(
-      List<? extends Iterable<? extends EObject>> peersList_p, List<String> baseNames_p) {
-    assert peersList_p != null && baseNames_p != null;
-    assert peersList_p.size() == baseNames_p.size();
+      List<? extends Iterable<? extends EObject>> peersList, List<String> baseNames) {
+    assert peersList != null && baseNames != null;
+    assert peersList.size() == baseNames.size();
     int index = 1;
     // Iterate over all cases and take the max proposed index for a suffix
-    for (int i=0; i<baseNames_p.size(); i++) {
-      String currentName = baseNames_p.get(i);
+    for (int i=0; i<baseNames.size(); i++) {
+      String currentName = baseNames.get(i);
       if (currentName != null) {
         int indexProposal =
-          getIndexForUniqueNameSuffix(peersList_p.get(i), currentName);
+          getIndexForUniqueNameSuffix(peersList.get(i), currentName);
         index = Math.max(index, indexProposal);
       }
     }
@@ -124,12 +124,12 @@ public final class NamingUtil {
   }
 
   private static int getIndexForUniqueNameSuffix(
-      Iterable<? extends EObject> peers_p, String baseName_p) {
-    assert peers_p != null;
-    final String baseName = (null == baseName_p)? "": baseName_p; //$NON-NLS-1$
+      Iterable<? extends EObject> peers, String baseName) {
+    assert peers != null;
+    final String bn = (null == baseName)? "": baseName; //$NON-NLS-1$
     // Gather names which are already used
     Set<String> names = new HashSet<String>();
-    for(EObject eo : peers_p) {
+    for(EObject eo : peers) {
       String current = getName(eo);
       if (null != current)
         names.add(current);
@@ -139,26 +139,26 @@ public final class NamingUtil {
     int i = 0;
     do {
       i++;
-      nameProposal = applySuffixNumberOn(baseName, i);
+      nameProposal = applySuffixNumberOn(bn, i);
     } while(names.contains(nameProposal) && i < Integer.MAX_VALUE);
     return i;
   }
   
-  private static String applySuffixNumberOn(String base_p, int number_p) {
-    return buildString(base_p, getSuffixFromNumber(number_p));
+  private static String applySuffixNumberOn(String base, int number) {
+    return buildString(base, getSuffixFromNumber(number));
   }
   
-  private static String getSuffixFromNumber(int number_p) {
+  private static String getSuffixFromNumber(int number) {
     return buildString(
-        DEFAULT_SUFFIX_START, new Integer(number_p));
+        DEFAULT_SUFFIX_START, Integer.valueOf(number));
   }
   
   /**
    * Concatenate the String representation of an arbitrary set of objects
    */
-  public static String buildString(Object... objects_p) {
+  public static String buildString(Object... objects) {
     StringBuilder builder = new StringBuilder();
-    for(Object object : objects_p)
+    for(Object object : objects)
       builder.append(null == object? "": object.toString()); //$NON-NLS-1$
     return builder.toString();
   }
